--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -153,7 +153,7 @@ if (
   const login = document.querySelector("#login") as HTMLButtonElement
 
   if (login) {
-    login.onclick = () => signIn("google")
+    login.onclick = () => signIn("github")
   }
 
   const logout = document.querySelector("#logout") as HTMLButtonElement
