feat: finish project

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -60,10 +60,7 @@ if (
       </div>
     )
     : (
-      <div id="logins">
-        <button class="login" id="login-google">Login with Google</button>
-        <button class="login" id="login-github">Login with Github</button>
-      </div>
+      <button id="login">Login</button>
     )
   }
 </header>
@@ -82,13 +79,13 @@ if (
     cursor: pointer;
   }
 
-  .login {
+  #login {
     color: white;
     font-size: 1.1rem;
     font-weight: 500;
   }
 
-  .login:hover {
+  #login:hover {
     color: gray;
   }
 
@@ -148,27 +145,15 @@ if (
   button:hover {
     color: gray;
   }
-
-  #logins {
-    display: flex;
-    flex-direction: column;
-    gap: 0.8rem;
-  }
 </style>
 
 <script>
   const { signIn, signOut } = await import("auth-astro/client")
   
-  const loginWithGoogle = document.querySelector("#login-google") as HTMLButtonElement
+  const login = document.querySelector("#login") as HTMLButtonElement
 
-  if (loginWithGoogle) {
-    loginWithGoogle.onclick = () => signIn("google")
-  }
-
-  const loginWithGithub = document.querySelector("#login-github") as HTMLButtonElement
-
-  if (loginWithGithub) {
-    loginWithGithub.onclick = () => signIn("github")
+  if (login) {
+    login.onclick = () => signIn("github")
   }
 
   const logout = document.querySelector("#logout") as HTMLButtonElement
